contrib/codegen/tests/ui-fail-nightly/database-types.stderr
error[E0277]: the trait bound `Unknown: rocket_contrib::databases::Poolable` is not satisfied
   --> $DIR/database-types.rs:7:10
    |
7   | struct A(Unknown);
    |          ^^^^^^^ the trait `rocket_contrib::databases::Poolable` is not implemented for `Unknown`
    |
   ::: $WORKSPACE/contrib/lib/src/databases.rs:832:29
    |
832 | pub struct Connection<K, C: Poolable> {
    |                             -------- required by this bound in `rocket_contrib::databases::Connection`

error[E0277]: the trait bound `std::vec::Vec<i32>: rocket_contrib::databases::Poolable` is not satisfied
   --> $DIR/database-types.rs:10:10
    |
10  | struct B(Vec<i32>);
    |          ^^^^^^^^ the trait `rocket_contrib::databases::Poolable` is not implemented for `std::vec::Vec<i32>`
    |
   ::: $WORKSPACE/contrib/lib/src/databases.rs:832:29
    |
832 | pub struct Connection<K, C: Poolable> {
    |                             -------- required by this bound in `rocket_contrib::databases::Connection`
